--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <title>some title</title>
 </head>
 
-<body style="background-color:blue">
+<body style="background-color:black">
 <h1>
-A car...
+A thing...
 </h1>
 
 
-<img src="https://www.chevroletarabia.com/content/dam/chevrolet/middle-east/master/english/index/performance/2022-corvette/colorizer/02-2022_Arctic%20White_Chevrolet_Corvette_RWD_COU_1LT_G8G_01.png?imwidth=960 " width="300"/>
+<img src=https://images.ctfassets.net/joi3nje8wm6a/2hEqvfVXchRie19onFKhph/55562ac622584fec6e6322c337b09b8f/attire.png?fm=webp
 
 </body>
 
