--- a/index.html
+++ b/index.html
@@ -1,17 +1,82 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>some title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>About Samsung</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #111;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        section {
+            margin: 20px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+        }
+        h1 {
+            color: #0073e6;
+        }
+        img {
+            width: 100%;
+            max-width: 300px; /* Smaller max-width for a smaller image */
+            height: auto;
+            border-radius: 8px;
+            margin-top: 20px;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #111;
+            color: white;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        .content {
+            display: flex;
+            justify-content: space-between;
+        }
+    </style>
 </head>
+<body>
+    <header>
+        <h1>About Samsung</h1>
+        <p>Innovating the Future of Technology</p>
+    </header>
 
-<body style="background-color:black">
-<h1>
-A thing...
-</h1>
+    <section>
+        <h2>Who is Samsung?</h2>
+        <div class="content">
+            <p>
+                Samsung Electronics is a South Korean multinational electronics company headquartered in Seoul, South Korea. It is one of the world’s largest producers of electronic devices, including smartphones, televisions, home appliances, and semiconductors. 
+                Founded in 1938 by Lee Byung-chul, Samsung has grown into a global leader in technology and innovation.
+            </p>
+            <!-- Replace this placeholder with your own image URL or local file -->
+            <img src="https://www.bell.ca/Styles/images/Samsung_Galaxy_Z_Flip6_silver_shadow_AI_lrg1_EN.png   " alt="Samsung Flip Phone">
+        </div>
+    </section>
 
+    <section>
+        <h2>Key Products</h2>
+        <ul>
+            <li>Smartphones - Samsung Galaxy Series</li>
+            <li>Televisions - QLED, LED TVs</li>
+            <li>Home Appliances - Refrigerators, Washing Machines, etc.</li>
+            <li>Semiconductors - Memory chips, Processors</li>
+            <li>Wearable Technology - Smartwatches, Earbuds</li>
+        </ul>
+    </section>
 
-<img src=https://images.ctfassets.net/joi3nje8wm6a/2hEqvfVXchRie19onFKhph/55562ac622584fec6e6322c337b09b8f/attire.png?fm=webp
-
-</body>
-
-</html>
+    <footer>
+        <p>&copy; 2025 Samsung Electronics. All rights reserved.</p>
